# Fun-Game

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  make_stars.py  makepallet.py
.github/workflows/: build-test.yml  github-action-build.yml
Resources/Shaders/: DepthRTTInstanced.vert  ShadowMappingInstanced.vert
Trash/: vboindexer.hpp
data/: README.md  biome_data.json  keymapping.json  materials.json  stars.json
data/Base/: biome_data.json  biome_map.as  biome_map.lua  biome_map_2.as
data/Base/biomes/: Test_Biome.json
data/Base/models/: Test.qb
data/Models/: DefaultTree.qb
data/base/: biome_data.json  biome_map.lua  materials.json
data/entities/: test.json
data/manifest/: literal_garbage.json  manifest.json  second_manifest.json
resources/as/: test.as
resources/lua/: is_prime_test.lua  logging.lua
resources/shaders/: Blue.frag  DepthRTT.frag  DepthRTT.vert  DepthRTTInstanced.vert  Green.frag  Passthrough.vert  Red.frag  ShaderStyleGuide.md  ShadowMapping.frag  ShadowMapping.vert  ShadowMappingInstanced.frag  ShadowMappingInstanced.vert  SimpleTexture.frag  SimpleTextureMS.frag  Sky.frag  Sky.frag.old  Sky.vert  Sky.vert.old  Sun.frag  Sun.vert
resources/shaders/background/: Sky.frag  Sky.vert  Stars.frag  Stars.vert  Sun.frag  Sun.vert
resources/shaders/overlay/: FramedWindow.frag  SimpleTexture.frag  SimpleTextureMS.frag  TextWindow.frag  TextWindow.vert  Widget.vert
resources/shaders/scene/: DepthRTT.frag  DepthRTT.vert  DepthRTTEntity.vert  DepthRTTInstanced.vert  Entity.vert  ShadowMapping.frag  ShadowMapping.vert  ShadowMappingInstanced.vert  TileEntity.frag  TileEntity.vert
resources/shaders/util/: average.frag  screen.vert
resources/textures/: GenericBorder.json  GenericBorder_2.json  GenericButton.json
scripts/: chaiscript_test_1.chai  chaiscript_test_2a.chai  chaiscript_test_2b.chai  chaiscript_test_3.chai  format.sh  lua_test.lua  lua_test_2.lua  lua_test_3.lua  lua_test_object.lua  make_palette.py  make_stars.py  map_generation.lua  map_generation_alternative_worley.lua  map_generation_w.lua  map_generation_worley.lua
src/: chunk.cpp  chunk.hpp  config.h.in  constants.hpp  exceptions.hpp  external_quill_logging.hpp  glm_logging.hpp  global_context.cpp  global_context.hpp  graphics_main.cpp  graphics_main.hpp  local_context.cpp  local_context.hpp  logging.cpp  logging.hpp  lua_context.cpp  lua_context.hpp  main.cpp  manifest.hpp  more_vectors.hpp  node-impls.cpp  node.cpp  node.hpp  node_group.cpp  node_group.hpp  onepath.hpp  pathfinder.cpp  terrain.cpp  terrain.hpp  tile.cpp  tile.hpp  types.hpp  world.cpp  world.hpp
src/Entity/: mesh.cpp  mesh.hpp
src/GUI/: FragmentShader.fragmentshader  ShadowMapping.frag  ShadowMapping.fragmentshader  ShadowMapping.vert  ShadowMapping.vertexshader  ShadowMappingInstanced.frag  ShadowMappingInstanced.vert  SimpleTexture.frag  VertexShader.vertexshader  controls.cpp  controls.hpp  main_gui.hpp  meshloader.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shadow_map.cpp  shadow_map.hpp
src/GUI/Shaders/: DepthRTTInstanced.vert  ShadowMapping.frag  ShadowMapping.vert  ShadowMappingInstanced.frag  ShadowMappingInstanced.vert  SimpleTexture.frag
src/Terrain/: TODO.txt  chunk.cpp  chunk.hpp  node.cpp  node.hpp  node_group.cpp  node_group.hpp  onepath.hpp  static_mesh.cpp  static_mesh.hpp  terrain.cpp  terrain.hpp  terrain_mesh.cpp  terrain_mesh.hpp  tile.cpp  tile.hpp  unit_path.hpp  unitpath.hpp
src/Terrain/TerrainGeneration/: land_generator.cpp  land_generator.hpp  landgenerator.cpp  landgenerator.hpp  material.hpp  noise.hpp  tile_stamp.hpp  tilestamp.hpp
src/Terrain/terrain_generation/: land_generator.cpp  land_generator.hpp  noise.cpp  noise.hpp  tilestamp.hpp
src/TerrainGeneration/: land_generator.hpp  material.hpp  noise.cpp  noise.hpp  tile_stamp.hpp
src/Util/: time.hpp  voxelutility.cpp  voxelutility.hpp
src/entity/: bones.cpp  bones.hpp  entity.cpp  entity.hpp  entity_species.cpp  entity_species.hpp  mesh.cpp  mesh.hpp  static_mesh.cpp  static_mesh.hpp  terrain_mesh.cpp  terrain_mesh.hpp  tile_object.cpp  tile_object.hpp  vertex.hpp
src/gui/: README.md  controls.cpp  controls.hpp  gui_logging.hpp  handler.cpp  handler.hpp  main_gui.cpp  main_gui.hpp  meshloader.hpp  opengl_program.cpp  opengl_program.hpp  placement.hpp  quad_renderer.cpp  quad_renderer.hpp  renderer.cpp  renderer.hpp  screen_data.cpp  shader.cpp  shader.hpp  shadow_map.cpp  shadow_map.hpp  sky_data.cpp  sky_data.hpp  tests.cpp  tests.hpp
src/gui/data_structures/: frame_buffer_multisample.cpp  frame_buffer_multisample.hpp  mesh.cpp  mesh.hpp  screen_data.cpp  screen_data.hpp  sky_data.cpp  sky_data.hpp  sky_data.hpp.old  static_mesh.cpp  static_mesh.hpp  terrain_mesh.cpp  terrain_mesh.hpp
src/gui/render/: gl_enums.hpp  quad_renderer.cpp  quad_renderer.hpp  quad_renderer_multisample.cpp  quad_renderer_multisample.hpp  renderer.cpp  renderer.hpp  shadow_map.cpp  shadow_map.hpp  sky.cpp  sky.cpp.old  sky.hpp  uniform_types.hpp
src/gui/scene/: controls.cpp  controls.hpp  environment.cpp  environment.hpp  (+10 more)
src/manifest/: manifest.hpp  object_handler.cpp  object_handler.hpp
src/terrain/: chunk.cpp  chunk.hpp  material.cpp  material.hpp  node-impls.cpp  node.cpp  node.hpp  node_group.cpp  node_group.hpp  static_mesh.cpp  static_mesh.hpp  terrain.cpp  terrain.hpp  terrain_base.cpp  terrain_base.hpp  terrain_helper-impls.cpp  terrain_helper.cpp  terrain_helper.hpp  terrain_mesh.cpp  terrain_mesh.hpp  tile.cpp  tile.hpp  tile_iterators.hpp  unit_path.hpp
src/util/: bits.hpp  chai_script_test.cpp  chai_script_test.hpp  chunk_hash.hpp  color.hpp  files.cpp  files.hpp  hash_combine.hpp  image.cpp  image.hpp  loading.cpp  loading.hpp  logging_util.hpp  mesh.cpp  mesh.hpp  png_image.cpp  png_image.hpp  position.hpp  time.hpp  vertex.hpp  voxel.cpp  voxel.hpp  voxel_io.cpp  voxel_io.hpp  voxelutility.cpp  voxelutility.hpp
src/world/: biome.cpp  biome.hpp  climate.hpp  plant.hpp  world.cpp  world.hpp
trash/: renderer.cpp  renderer.hpp
(+327 files in other folders)
